--- a/src/components/molecules/homepage/create-account/create-account.module.scss
+++ b/src/components/molecules/homepage/create-account/create-account.module.scss
@@ -1,6 +1,7 @@
-.create-account {
+.createAccount {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
     display: flex;
-    font-size: 16px;
     justify-content: center;
     margin-top: 5px;
     background: #fff;
@@ -9,6 +10,7 @@
     padding-top: 24px;
      padding-bottom: 24px;
      a {
+        font-weight: bold;
          color: #3897f0;
          margin-left: 5px;
      }
