--- a/src/components/molecules/homepage/form/form.module.scss
+++ b/src/components/molecules/homepage/form/form.module.scss
@@ -1,25 +1,27 @@
-.login-form {
+.loginForm {
     display: flex;
     flex-direction: column;
     width: 100%;
 
-       .login-input, .sign-in__button {
+       .loginInput, .signInButton {
+        font-family: 'Montserrat', sans-serif;
         max-width: 265px;
         width: 100%;
         margin: 0 auto;
     }
     
-    .sign-in__button {
+    .signInButton {
          padding: 5px 2px;
          margin-top: 10px;
          background: #3897f0;
          color: white;
-         font-size: 14px;
+         font-size: 12px;
+         font-weight: 600;
          border: none;
          border-radius: 4px;
     }
 
-     .login-input  {
+     .loginInput  {
          input {
          border: 1px solid #efefef;
          width: 100%;
@@ -32,7 +34,5 @@
              font-size: 11px;
          }
          }
-       
      }
-
 }
