--- a/src/components/molecules/homepage/create-account/create-account.module.scss
+++ b/src/components/molecules/homepage/create-account/create-account.module.scss
@@ -2,10 +2,8 @@
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
     display: flex;
-    justify-content: center;
     margin-top: 5px;
-    background: #fff;
-    border: 1px solid #e6e6e6;
+    justify-content: center;
     border-radius: 1px;
     padding-top: 24px;
      padding-bottom: 24px;
@@ -14,4 +12,17 @@
          color: #3897f0;
          margin-left: 5px;
      }
+
+    @media (max-width: 400px) {
+        flex-direction: column;
+        align-items: center;
+        a {
+            margin-top: 10px;
+     }
+  }
+
+      @media (min-width: 450px) {
+     border: 1px solid #e6e6e6;
+    background: #fff;
+  }
 }
