--- a/src/components/molecules/homepage/form/form.module.scss
+++ b/src/components/molecules/homepage/form/form.module.scss
@@ -5,7 +5,6 @@
 
        .loginInput, .signInButton {
         font-family: 'Montserrat', sans-serif;
-        max-width: 265px;
         width: 100%;
         margin: 0 auto;
     }
@@ -19,6 +18,12 @@
          font-weight: 600;
          border: none;
          border-radius: 4px;
+    }
+
+    @media (min-width: 450px) {
+        .loginInput, .signInButton  {
+     max-width: 265px;
+        }
     }
 
      .loginInput  {
