--- a/src/components/organisms/homepage/footer/footer.module.scss
+++ b/src/components/organisms/homepage/footer/footer.module.scss
@@ -19,7 +19,7 @@
             justify-content: center;
             align-items: center;
             margin: 0 auto;
-            width: 45%;
+            max-width: 360px;
             padding-bottom: 10px;
          .infoBlock {
             flex-wrap: wrap;
@@ -29,7 +29,12 @@
     }
     }
 
-    
+           @media (max-width: 450px) {
+            .footer {
+                margin-top: 40px;
+            }
+  }
+
      @media (min-width: 851px) {
         .footer {
             padding: 30px 0px;
