--- a/src/components/organisms/homepage/login/login.module.scss
+++ b/src/components/organisms/homepage/login/login.module.scss
@@ -9,13 +9,15 @@
       display: flex;
       flex-direction: column;
       align-items:center;
-      border: 1px solid #e6e6e6;
       border-radius: 1px;
       width: 100%;
       margin: 0 0 10px;
       padding: 10px 0;
-      background: #fff;
-
+     
+ @media (min-width: 450px) {
+     border: 1px solid #e6e6e6;
+    background: #fff;
+  }
        .instagramInscr {
           height: auto;
           width: 175px;
@@ -28,12 +30,14 @@
       font-size: 12px;
       font-weight: 600;
      display: flex;
-     max-width: 265px;
      width: 100%;
      color: #999;
      justify-content: space-between;
      align-items: center;
      margin-top: 20px;
+      @media (min-width: 450px) {
+       max-width: 265px;
+    }
     }
 
     .forgotPassword {
