--- a/src/components/pages/login-page/login-page.module.scss
+++ b/src/components/pages/login-page/login-page.module.scss
@@ -5,11 +5,14 @@
    display: flex;
    padding: 0 20px;
    flex-direction: column;
-   align-items: center;
+  
+           
+ @media (min-width: 450px) {
+       align-items: center;
+  }
   .inner {
     .mainContent {
       display: flex;
-      height: 100vh;
       justify-content: center;
       align-items: center;
 
@@ -22,6 +25,10 @@
        @media (min-width: 851px) {
            padding-bottom: 40px;
         }
+
+        @media (min-width: 450px) {
+            height: 100vh;
+  }
     }
     }
   }
