complete header and started account-info section

--- a/src/components/atoms/avatar/avatar.module.scss
+++ b/src/components/atoms/avatar/avatar.module.scss
@@ -1,4 +1,9 @@
-.avatarWrap {
-    max-width: 75px;
+.avatarImg {
+    width: 100%;
+}
+
+.profilePage {
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
 }
