--- a/src/components/atoms/instagram-img/instagram-img.module.scss
+++ b/src/components/atoms/instagram-img/instagram-img.module.scss
@@ -1,7 +1,12 @@
 .instagramImg {
-    max-width: 175px;
+    width: 100%;
 }
 
 .loginPage {
+    max-width: 175px;
     margin: 24px 0;
+}
+
+.profilePage {
+    width: 100px;
 }
