--- a/src/components/atoms/line/line.module.scss
+++ b/src/components/atoms/line/line.module.scss
@@ -1,5 +1,18 @@
-.line {
+.loginPage {
         background: #efefef;
-        height: 1px;
         width: 40%;
+}
+
+.header {
+    background-color: #262626;
+    height: 32px;
+    margin: 0 16px;
+}
+
+.vertical {
+        width: 1px;
+}
+
+.horizontal {
+      height: 1px;
 }
