--- a/src/components/atoms/avatar/index.module.scss
+++ b/src/components/atoms/avatar/index.module.scss
@@ -2,8 +2,9 @@
     width: 100%;
 }
 
-.profilePage {
+.profile {
     width: 150px;
     height: 150px;
+    overflow: hidden;
     border-radius: 50%;
 }
