--- a/src/components/pages/ProfilePage/index.module.scss
+++ b/src/components/pages/ProfilePage/index.module.scss
@@ -9,7 +9,8 @@
         flex-direction: column;
         align-items: center;
         .inner {
-            width: 80%;
+            width: 68%;
+            padding-top: 50px;
         }
     }
 }
