start work on adaptive

--- a/src/components/molecules/ProfilePage/Header/IconSections/index.module.scss
+++ b/src/components/molecules/ProfilePage/Header/IconSections/index.module.scss
@@ -2,4 +2,28 @@
     display: flex;
     justify-content: space-between;
     width: 156px;
+
+.searchPeople,
+.likesPublications,
+.myProfile {
+    background: url('../../../../../assets/icons-image-size-m.png');
+    background-repeat: no-repeat;
+    display: block;
+    width: 24px;
+    height: 24px;
+} 
+
+.searchPeople {
+ background-position: -257px -200px;
 }
+
+.likesPublications {
+    background-position: -290px -248px;
+}
+
+.myProfile {
+    background-position: -208px -274px;
+}
+
+}
+
