--- a/src/components/atoms/text/index.module.scss
+++ b/src/components/atoms/text/index.module.scss
@@ -8,9 +8,7 @@
     font-weight: 600;
     margin-right: 10px;
     margin-top: 10px;
-    &:last-child {
-    margin-right: 0px;
-    }
+    flex-shrink: 0;
 }
 
 .userName {
