--- a/src/components/molecules/ProfilePage/AccountInfo/AccountSettings/index.module.scss
+++ b/src/components/molecules/ProfilePage/AccountInfo/AccountSettings/index.module.scss
@@ -1,3 +1,12 @@
 .settings {
     display: flex;
+    align-items: center;
+    .settingsIcon {
+        display: block;
+        background: url('../../../../../assets/icons-image-size-m.png');
+        background-repeat: no-repeat;
+        background-position: -234px -326px;
+        height: 24px;
+        width: 24px;
+    }
 }
