--- a/src/components/molecules/ProfilePage/Header/InstagramLogo/index.module.scss
+++ b/src/components/molecules/ProfilePage/Header/InstagramLogo/index.module.scss
@@ -2,4 +2,13 @@
     display: flex;
     max-width: 370px;
     align-items: center;
+
+    .instagramIcon {
+        display: block;
+        background: url('../../../../../assets/icons-image-size-m.png');
+        background-repeat: no-repeat;
+        background-position: -74px -231px;
+        height: 24px;
+        width: 24px;
+    }
 }
