--- a/src/components/organisms/LoginPage/Footer/index.module.scss
+++ b/src/components/organisms/LoginPage/Footer/index.module.scss
@@ -18,7 +18,7 @@
          .footer {
             justify-content: center;
             align-items: center;
-            margin: 0 auto;
+            margin: 40px auto;
             max-width: 360px;
             padding-bottom: 10px;
          .infoBlock {
@@ -37,7 +37,12 @@
 
      @media (min-width: 851px) {
         .footer {
-            padding: 30px 0px;
+            width: calc(100% - 40px); 
+            padding: 30px 20px;
+            max-width: 935px;
+             .infoBlock, .inst {
+            align-self: flex-start;
+         }
         }
     }
 
