--- a/src/components/organisms/ProfilePage/Header/index.module.scss
+++ b/src/components/organisms/ProfilePage/Header/index.module.scss
@@ -2,11 +2,13 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    background: #fff;
     border-bottom: 1px solid #dbdbdb;
     .items {
         display: flex;
-        padding: 22px 20px;
-        width: 80%;
+        max-width: 1010px;
+        padding: 20px 20px;
+        width: 100%;
         justify-content: space-between;
     }
 }
