create first simple structure

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 @import './scss/reset.css';
 @import './scss/fonts/Montserrat/stylesheet.css';
 @import './scss/variables.scss';
+@import './scss/variables.css';
