--- a/src/components/pages/LoginPage/index.module.scss
+++ b/src/components/pages/LoginPage/index.module.scss
@@ -1,9 +1,15 @@
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 20px;
   min-height: 100vh;
+
+  .main {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .image { 
