--- a/src/components/pages/ProfilePage/index.module.scss
+++ b/src/components/pages/ProfilePage/index.module.scss
@@ -1,10 +1,13 @@
 .profilePage {
     background:hsl(0, 0%, 98%);
+    display: flex;
+    justify-content: center;
     .inner {
             display: flex;
             flex-direction: column;
             align-items: center;
             box-sizing: border-box;
+            min-width: 100vh;
             width: 100%;
             max-width: 1350px;
     
