--- a/src/components/organisms/Main/List/index.module.css
+++ b/src/components/organisms/Main/List/index.module.css
@@ -10,7 +10,7 @@
 }
 
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .cardWrapper {
     flex-basis: 50%;
   }
@@ -20,4 +20,4 @@
   .cardWrapper {
     flex-basis: 100%;
   }
-}
+} */
