--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,9 +1,9 @@
-$scren-sm: 576px;
-$scren-md: 768px;
-$scren-lg: 992px;
-$scren-xl: 1200px;
+$screen-sm: 576px;
+$screen-md: 768px;
+$screen-lg: 992px;
+$screen-xl: 1200px;
 
-$scren-xs-max: 575px;
-$scren-sm-max: 767px;
-$scren-md-max: 991px;
-$scren-lg-max: 1199px;
+$screen-xs-max: 575px;
+$screen-sm-max: 767px;
+$screen-md-max: 991px;
+$screen-lg-max: 1199px;
