--- a/src/components/atoms/Photo/index.module.scss
+++ b/src/components/atoms/Photo/index.module.scss
@@ -1,11 +1,15 @@
+@import '../../../scss/variables.scss';
+
 .photo {
-    max-width: 270px;
-    margin-right: 28px;
-    margin-top: 28px;
-    &:nth-child(3n+3) {
-        margin-right: 0px;
+    width: 33.33%;
+    &:nth-child(-n+3) {
+        padding-top: 0px;
     }
-     &:nth-child(-n+3) {
-        margin-top: 0px;
+     @media screen and (min-width:$screen-md) {
+         padding: 14px;
+    }
+
+    @media screen and (max-width:$screen-sm-max) {
+         padding: 3px;
     }
 }
