--- a/src/components/atoms/input/index.module.scss
+++ b/src/components/atoms/input/index.module.scss
@@ -1,3 +1,4 @@
+@import '../../../scss/variables.scss';
 .input {
     width: 100%;
     border: none;
@@ -15,5 +16,8 @@
         &::placeholder {
             color: #999;
             text-align: center;
+        }
+        @media screen and (max-width:$screen-xs-max) {
+            display: none;
         }
 }
