--- a/src/components/organisms/ProfilePage/AccountInfo/index.module.scss
+++ b/src/components/organisms/ProfilePage/AccountInfo/index.module.scss
@@ -1,15 +1,36 @@
+@import '../../../../scss/variables.scss';
 .accountInfo {
     display: flex;
-    margin-left: 50px;
-
-    .avatarWrap {
-        margin-right: 70px;
-    }
 
     .info {
         display: flex;
         width: 100%;
-        justify-content: space-between;
         flex-direction: column;
+    }
+
+     @media screen and (min-width:$screen-sm) {
+        margin-left: 50px;
+    }
+
+    @media screen and (max-width:$screen-sm-max) {
+        align-items: center;
+        .info {
+            justify-content: space-between;
+        }
+    }
+
+     @media screen and (min-width:421px) {
+             .avatarWrap {
+        margin-right: 70px;
+    }
+    }
+
+    
+
+     @media screen and (max-width:420px) {
+        flex-direction: column;
+         .info {
+            align-items: center;
+        }
     }
 }
