--- a/src/components/pages/ProfilePage/index.module.scss
+++ b/src/components/pages/ProfilePage/index.module.scss
@@ -7,7 +7,7 @@
             flex-direction: column;
             align-items: center;
             box-sizing: border-box;
-            min-width: 100vh;
+            min-height: 100vh;
             width: 100%;
             max-width: 1350px;
     
