--- a/src/components/organisms/ProfilePage/AccountPublication/index.module.scss
+++ b/src/components/organisms/ProfilePage/AccountPublication/index.module.scss
@@ -1,6 +1,15 @@
+@import '../../../../scss/variables.scss';
+
 .accountPublication {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+
+    @media screen and (min-width:$screen-sm) {
+             margin-top: 100px;
+          }  
+
+           @media screen and (max-width:$screen-xs-max) {
+               margin-top: 50px;
+          }  
 }
