--- a/src/components/organisms/Header/index.module.scss
+++ b/src/components/organisms/Header/index.module.scss
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    position: absolute;
+    position: fixed;
     justify-content: center;
     width: 100%;
     height: 75px;
