start create structure for sidebar

--- a/src/components/molecules/Header/IconSections/index.module.scss
+++ b/src/components/molecules/Header/IconSections/index.module.scss
@@ -1,7 +1,8 @@
 .iconSections {
     display: flex;
     justify-content: space-between;
-    width: 156px;
+    flex-basis: 125px;;
+    flex-shrink: 0;
 
 .searchPeople,
 .likesPublications,
