--- a/src/components/atoms/avatar/index.module.scss
+++ b/src/components/atoms/avatar/index.module.scss
@@ -18,3 +18,15 @@
          height: 150px;
     }
 }
+
+
+.main-sidebar {
+    border: 1px solid rgba(0,0,0,.0975);
+    overflow: hidden;
+    border-radius: 50%;
+
+      @media screen and (min-width:$screen-sm) {
+         width: 50px;
+         height: 50px;
+    }
+}
