--- a/src/components/organisms/Header/index.module.scss
+++ b/src/components/organisms/Header/index.module.scss
@@ -5,16 +5,30 @@
     width: 100%;
     height: 75px;
     top: 0;
+    padding: 0px 20px;
     left: 0;
     text-align: center;
     line-height: 75px;
     background: #fff;
     border-bottom: 1px solid #dbdbdb;
+    transition: all 0.4s ease-in-out;
     .items {
         display: flex;
         max-width: 1010px;
-        padding: 20px 20px;
         width: 100%;
+        align-items: center;
         justify-content: space-between;
+
+        .item {
+            display: flex;
+            flex-basis: calc(50% - 99.5px);
+            &:last-child {
+                justify-content: flex-end;
+            }
+        }
     }
+}
+
+.scrolled {
+    height: 50px;
 }
