--- a/src/components/molecules/Main/Sidebar/Recomendations/Recomendation/index.module.scss
+++ b/src/components/molecules/Main/Sidebar/Recomendations/Recomendation/index.module.scss
@@ -1,9 +1,8 @@
-.profileInfo {
+.recomendation {
     display: flex;
     align-items: center;
 
-    .nicknames {
-        margin-left: 10px;
+    .action {
         display: flex;
         flex-direction: column;
     }
