--- a/src/components/molecules/Main/Sidebar/Stories/Story/index.module.scss
+++ b/src/components/molecules/Main/Sidebar/Stories/Story/index.module.scss
@@ -1,8 +1,8 @@
-.profileInfo {
+.story {
     display: flex;
     align-items: center;
 
-    .nicknames {
+    .timePublication {
         margin-left: 10px;
         display: flex;
         flex-direction: column;
