--- a/src/components/molecules/Main/Sidebar/Stories/Story/index.module.scss
+++ b/src/components/molecules/Main/Sidebar/Stories/Story/index.module.scss
@@ -1,7 +1,8 @@
 .story {
     display: flex;
     align-items: center;
-
+    border-radius: 4px;
+    
     .timePublication {
         margin-left: 10px;
         display: flex;
