--- a/src/components/organisms/Main/List/index.module.scss
+++ b/src/components/organisms/Main/List/index.module.scss
@@ -1,22 +1,22 @@
 .list {
   display: flex;
-  flex-wrap: wrap;
-  margin: -10px;
+  flex-direction: column;
+  max-width: 614px;
+  width: 100%;
 }
 
 .cardWrapper {
-  flex-basis: 33.33%;
-  padding: 10px;
+  margin-bottom: 60px;
 }
 
 @media screen and (max-width: 768px) {
-  .cardWrapper {
-    flex-basis: 50%;
-  }
+  // .cardWrapper {
+  //   flex-basis: 50%;
+  // }
 }
 
 @media screen and (max-width: 480px) {
-  .cardWrapper {
-    flex-basis: 100%;
-  }
+  // .cardWrapper {
+  //   flex-basis: 100%;
+  // }
 } 
