--- a/src/components/molecules/Main/List/Card/index.module.scss
+++ b/src/components/molecules/Main/List/Card/index.module.scss
@@ -1,8 +1,15 @@
 .card {
-  border-radius: 5px;
   border: 1px solid var(--gray);
   box-shadow: 0px 0px 5px 1px var(--gray);
-  padding: 0.5rem;
+  border-bottom: 1px solid #efefef;
+  background: #fff;
+  border-radius: 4px;
+
+  .other {
+    display: flex;
+    flex-direction: column;
+    padding: 8px 16px;
+  }
 }
 
 .image {
