--- a/src/components/molecules/Main/Sidebar/Recomendations/Recomendation/index.module.scss
+++ b/src/components/molecules/Main/Sidebar/Recomendations/Recomendation/index.module.scss
@@ -5,5 +5,14 @@
     .action {
         display: flex;
         flex-direction: column;
+        font-family: 'Montserrat', sans-serif;
+        margin-left: 10px;
+
+        .subscribe {
+            color: #3897f0;
+            font-weight: 600;
+            font-size: 12px;
+            cursor: pointer;
+        }
     }
 }
