--- a/src/components/molecules/Main/Sidebar/Stories/index.module.scss
+++ b/src/components/molecules/Main/Sidebar/Stories/index.module.scss
@@ -1,11 +1,12 @@
 .stories {
     display: flex;
     flex-direction: column;
-    width: 300px;
     background: #fff;
     border: 1px solid #e6e6e6;
     padding: 15px 20px;
     margin-top: 20px;
+    border-radius: 4px;
+    width: 100%;
 
     .title {
         display: flex;
@@ -16,6 +17,10 @@
         font-size: 14px;
         margin-bottom: 10px;
         border-radius: 4px;
+
+          .history, .seeAll {
+            cursor: pointer;
+        }
 
         .seeAll {
             color: #262626;
