--- a/src/components/pages/ProfilePage/index.module.scss
+++ b/src/components/pages/ProfilePage/index.module.scss
@@ -3,12 +3,5 @@
         max-width: 935px;
         display: flex;
         flex-direction: column;
-        width: calc(100% - 40px);
-          @media screen and (min-width:$screen-sm) {
-                padding: 40px 20px 0;
-          }  
-
-           @media screen and (max-width:$screen-xs-max) {
-                padding: 20px;
-          }  
+        width: 100%;
 }
