--- a/src/components/pages/Main/index.module.scss
+++ b/src/components/pages/Main/index.module.scss
@@ -3,8 +3,13 @@
   max-width: 935px;
   display: flex;
   width: 100%;   
-  
-  @media screen and (max-width: 1024px) {
-      justify-content: center;
-    }
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    max-width: 935px;
+    display: flex;
+    width: 100%;   
+    justify-content: center;
+  }
 }
