--- a/src/components/organisms/Main/Sidebar/index.module.scss
+++ b/src/components/organisms/Main/Sidebar/index.module.scss
@@ -1,61 +1,13 @@
 @import '../../../../scss/variables.scss';
 .sidebar {
-    position: fixed;
-    top: 100px;
+    position: sticky;
     display: flex;
-    left: 65%;
+    top : 75px;
+    right: 0;
     flex-direction: column;
     width: 280px;
     transition: all 0.2s ease-in-out;
-    
-    @media screen and (max-width: 1300px) {
-        left: 65.25%;
-    }
-
-    @media screen and (max-width: 1275px) {
-        left: 65.50%;
-    }
-
-    @media screen and (max-width: 1250px) {
-        left: 65.75%;
-    }
-
-    @media screen and (max-width: 1225px) {
-        left: 66%;
-    }
-
-    @media screen and (max-width: 1200px) {
-        left: 66.25%;
-    }
-
-    @media screen and (max-width: 1175px) {
-        left: 66.5%;
-    }
-
-    @media screen and (max-width: 1150px) {
-        left: 66.75%;
-    }
-
-    @media screen and (max-width: 1125px) {
-        left: 67%;
-    }
-
-    @media screen and (max-width: 1100px) {
-        left: 67.25%;
-    }
-
-    @media screen and (max-width: 1075px) {
-        left: 67.50%;
-    }
-
-    @media screen and (max-width: 1050px) {
-        left: 67.75%;
-    }
-
-    @media screen and (max-width: 1025px) {
-        left: 68%;
-    }
-
+    height: 0;
 
      @media screen and (max-width: 1024px) {
        display: none;
