--- a/src/components/organisms/Footer/index.module.scss
+++ b/src/components/organisms/Footer/index.module.scss
@@ -1,16 +1,14 @@
 @import '../../../scss/variables.scss';
 .footer {
     font-family: 'Montserrat', sans-serif;
-    display: flex;
-    flex-direction: column;
     .infoBlock {
      display: flex;
      flex-wrap: wrap;
+     margin-bottom: 10px;
     }
     .inst {
         font-size: 11px;
         color: #999;
-        margin-top: 15px;
         font-weight: 600;
     }
 }
@@ -18,14 +16,14 @@
 
      @media (min-width: 851px) {
         .footer {
-            width: calc(100% - 40px); 
-            padding: 30px 30px;
+            width: 100%;
             max-width: 935px;
         }
     }
 
      @media (max-width: 850px) {
          .footer {
+            text-align: center;
             justify-content: center;
             align-items: center;
             max-width: 360px;
