--- a/src/components/organisms/Main/List/index.module.scss
+++ b/src/components/organisms/Main/List/index.module.scss
@@ -1,22 +1,11 @@
 .list {
   display: flex;
   flex-direction: column;
-  max-width: calc(100% - 280px);
+  max-width: calc(100% - 320px);
   width: 100%;
+  margin-right: 40px;
 }
 
 .cardWrapper {
   margin-bottom: 60px;
 }
-
-@media screen and (max-width: 768px) {
-  // .cardWrapper {
-  //   flex-basis: 50%;
-  // }
-}
-
-@media screen and (max-width: 480px) {
-  // .cardWrapper {
-  //   flex-basis: 100%;
-  // }
-} 
