--- a/src/components/pages/LoginPage/index.module.scss
+++ b/src/components/pages/LoginPage/index.module.scss
@@ -1,14 +1,10 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
   min-height: 100vh;
 
   .main {
     display: flex;
     align-items: center;
+    padding: 40px 0px;
   }
 }
 
