--- a/src/components/pages/Main/index.module.scss
+++ b/src/components/pages/Main/index.module.scss
@@ -1,16 +1,20 @@
 @import '../../../scss/variables.scss';
+
+.inner {
+    width: 100%;
+    max-width: 1350px;
+ }
+
 .container {
   display: flex;
   width: 100%;   
+  margin: 0 auto;
   max-width: 935px;
   position: relative;
 }
 
 @media screen and (max-width: 1024px) {
   .container {
-    display: flex;
-    width: 100%;   
-    max-width: 935px;
     justify-content: center;
   }
 }
