--- a/src/components/organisms/ProfilePage/AccountInfo/index.module.scss
+++ b/src/components/organisms/ProfilePage/AccountInfo/index.module.scss
@@ -1,11 +1,27 @@
 @import '../../../../scss/variables.scss';
 .accountInfo {
+    font-family: "Montserrat", sans-serif;
     display: flex;
 }
 
 .info {
      display: flex;
     flex-direction: column;
+}
+
+.accountAbout {
+    display: flex;
+    flex-direction: column;
+}
+
+.realName {
+  font-size: 15px;
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+
+.aboutAccount {
+    font-size: 14px;
 }
 
 @media screen and (min-width:$screen-sm) {
