--- a/src/components/molecules/Main/Sidebar/ProfileInfo/index.module.scss
+++ b/src/components/molecules/Main/Sidebar/ProfileInfo/index.module.scss
@@ -1,6 +1,7 @@
 .profileInfo {
     display: flex;
     align-items: center;
+    font-family: "Montserrat", sans-serif;
 
     .nicknames {
         margin-left: 10px;
@@ -8,3 +9,11 @@
         flex-direction: column;
     }
 }
+
+.authUser {
+    font-size: 13px;
+    color: #262626;
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+
