--- a/src/components/molecules/ProfilePage/AccountInfo/AccountSettings/index.module.scss
+++ b/src/components/molecules/ProfilePage/AccountInfo/AccountSettings/index.module.scss
@@ -24,3 +24,23 @@
         }
     }
 }
+
+.editProfile {
+    background-color: transparent;
+    border: 1px solid #dbdbdb;
+    color: #262626;
+    width: 174px;
+    height: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 4px;
+
+     @media screen and (min-width:$screen-md) {
+           margin: 0px 15px;
+    }
+
+     @media screen and (max-width:$screen-sm-max) {
+       margin-right: 15px;
+    }
+}
