--- a/src/components/organisms/Header/index.module.scss
+++ b/src/components/organisms/Header/index.module.scss
@@ -1,3 +1,4 @@
+@import "../../../scss/variables.scss";
 .header {
     display: flex;
     z-index:10;
@@ -20,7 +21,7 @@
         align-items: center;
         justify-content: space-between;
 
-        .item {
+        .item, .link {
             display: flex;
             flex-basis: calc(50% - 99.5px);
             &:last-child {
@@ -30,6 +31,37 @@
     }
 }
 
+.searchInput {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 12px;
+        background: #fafafa;
+        border: 1px solid #dbdbdb;
+        border-radius: 4px;
+        width: 199px;
+        height: 22px;
+        padding-left: 20px;
+        &::placeholder {
+            color: #999;
+            text-align: center;
+        }
+        @media screen and (max-width:$screen-xs-max) {
+            display: none;
+        }
+}
+
 .scrolled {
     height: 50px;
+}
+
+.link {
+    text-decoration: none;
+    outline: none;
+    &:active,  &:visited ,  &:focus  {
+        text-decoration: none;
+        outline: none;
+        border: 0;
+    }
+    &:active {
+       opacity: 0.7;
+    }
 }
