add some am=nimation and fix some bag

--- a/src/components/Header/IconSections/index.module.scss
+++ b/src/components/Header/IconSections/index.module.scss
@@ -7,7 +7,7 @@
 .searchPeople,
 .likesPublications,
 .myProfile {
-    // background: url('../../../../assets/icons-image-size-m.png');
+    background: url('../../../assets/icons-image-size-m.png');
     background-repeat: no-repeat;
     display: block;
     width: 24px;
