--- a/src/components/Header/InstagramLogo/index.module.scss
+++ b/src/components/Header/InstagramLogo/index.module.scss
@@ -5,7 +5,7 @@
     cursor: pointer;
     .instagramIcon {
         display: block;
-        // background: url('../../../../assets/icons-image-size-m.png');
+        background: url('../../../assets/icons-image-size-m.png');
         background-repeat: no-repeat;
         background-position: -74px -231px;
         height: 24px;
