--- a/src/components/Main/List/Card/UserActions/index.module.scss
+++ b/src/components/Main/List/Card/UserActions/index.module.scss
@@ -14,7 +14,7 @@
     height: 24px;
     width: 24px;
     background-repeat: no-repeat;
-    // background: url('../../../../../../assets/icons-image-size-m.png');
+    background: url('../../../../../assets/icons-image-size-m.png');
   }
 
   .like {
