--- a/src/components/ProfilePage/AccountPublication/PublicationSections/index.module.scss
+++ b/src/components/ProfilePage/AccountPublication/PublicationSections/index.module.scss
@@ -5,22 +5,35 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  .liContainer {
+  .link {
     color: #999;
     display: flex;
     align-items: center;
+    box-sizing: border-box;
+    text-decoration: none;
+    outline: none;
+    &:active,  &:visited ,  &:focus  {
+        text-decoration: none;
+        outline: none;
+    }
+    &:active {
+       opacity: 0.7;
+    }
 
     .myPhotos,
     .igtv,
     .savedPublications,
-    .marks {
+    .tagged {
       display: block;
       background-repeat: no-repeat;
       border: none;
       outline: none;
     }
+  }
+}
 
-    @media screen and (min-width: $screen-md) {
+@media screen and (min-width: $screen-md) {
+  .link {
       padding: 20px;
       margin-right: 40px;
       font-family: "Montserrat", sans-serif;
@@ -35,46 +48,56 @@
       .myPhotos,
       .igtv,
       .savedPublications,
-      .marks {
+      .tagged {
         background: url('../../../../assets/icons-image-size-s.png');
         height: 12px;
         width: 12px;
       }
       .myPhotos {
         background-position: -274px -337px;
-        &:focus {
-            background-position: -260px -337px;
-        }
       }
       .igtv {
         background-position: -330px -337px;
-         &:focus {
-            background-position: -316px -337px;
-        }
       }
       .savedPublications {
         background-position: -42px -361px;
         width: 10px;
-         &:focus {
-            background-position: -393px -258px;
-        }
       }
-      .marks {
+      .tagged {
         background-position: -246px -337px;
-         &:focus {
-              background-position: -288px -337px;
-        }
       }
-    }
+  } 
 
-    @media screen and (max-width: $screen-sm-max) {
+   .active {
+          border-top: 1px solid #262626;
+          .sectionName {
+            color:black;
+          }
+          .myPhotos {
+            background-position: -260px -337px;
+          }
+          .igtv {
+            background-position: -316px -337px;
+          }
+          .savedPublications {
+              background-position: -393px -258px;
+          }
+          .tagged {
+            background-position: -288px -337px;
+          }
+        }
+}
+
+
+  @media screen and (max-width: $screen-sm-max) {
+    .link {
       width: 25%;
       justify-content: center;
       padding: 14px;
       .myPhotos,
       .igtv,
       .savedPublications,
-      .marks {
+      .tagged {
         background: url('../../../../assets/icons-image-size-m.png');
         height: 24px;
         width: 24px;
@@ -88,7 +111,7 @@
       .savedPublications {
         background-position: -104px -326px;
       }
-      .marks {
+      .tagged {
         background-position: -208px -326px;
       }
 
@@ -96,5 +119,19 @@
         display: none;
       }
     }
+
+     .active {
+          .myPhotos {
+            background-position: -340px -260px;
+          }
+          .igtv {
+            background-position: -130px -300px;
+          }
+          .savedPublications {
+            background-position: -78px -326px;
+          }
+          .tagged {
+            background-position: -312px -326px;
+          }
+        }
   }
-}
