--- a/src/components/Main/Sidebar/ItemBlock/index.module.scss
+++ b/src/components/Main/Sidebar/ItemBlock/index.module.scss
@@ -11,6 +11,7 @@
         .titlesBlock {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         color: #999;
         font-family: 'Montserrat', sans-serif;
         font-weight: 600;
