add some comments for photos

--- a/src/components/Main/List/Card/UserComment/index.module.scss
+++ b/src/components/Main/List/Card/UserComment/index.module.scss
@@ -1,7 +1,8 @@
 .userComment {
+    margin-top: 4px;
     font-family: 'Montserrat', sans-serif;
     word-wrap: break-word;
-    font-size: 14px;
+    font-size: 13px;
         .username {
             margin-right: 5px;
             color: #262626;
