--- a/src/components/Main/List/Card/index.module.scss
+++ b/src/components/Main/List/Card/index.module.scss
@@ -22,7 +22,7 @@
     align-items: center;
     .username {
       font-family: "Montserrat", sans-serif;
-      font-size: 14px;
+      font-size: 13px;
       color: #262626;
       font-weight: 600;
     }
@@ -30,7 +30,7 @@
 
   .icon {
     display: block;
-    // background: url('../../../../../assets/icons-image-size-m.png');
+    background: url('../../../../assets/icons-image-size-m.png');
     background-repeat: no-repeat;
     background-position: -340px -156px;
     height: 24px;
