--- a/src/components/Main/List/Card/UserActions/index.module.scss
+++ b/src/components/Main/List/Card/UserActions/index.module.scss
@@ -17,8 +17,46 @@
     background: url('../../../../../assets/icons-image-size-m.png');
   }
 
-  .like {
-    background-position: -26px -300px;
+  .liked {
+    background-position: 0 -300px;
+    animation-name: like-button-animation;
+    animation-duration: .45s;
+    animation-timing-function: ease-in-out;
+    transform: scale(1);
+  }
+
+    .dontLiked {
+       background-position: -26px -300px;
+      animation-name: dont-like-button-animation;
+      animation-duration: .45s;
+      animation-timing-function: ease-out;
+      transform: scale(1);
+  }
+
+   @keyframes like-button-animation {
+    0%, 100% {
+        transform: scale(1);
+    }
+    25% {
+
+        transform: scale(1.2);
+    }
+    50% {
+        transform: scale(.95);
+    }
+  }
+
+  @keyframes dont-like-button-animation {
+    0%, 100% {
+        transform: scale(1);
+    }
+    25% {
+
+        transform: scale(1.2);
+    }
+    50% {
+        transform: scale(.95);
+    }
   }
 
   .comments {
