--- a/src/components/ProfilePage/AccountPublication/PhotoGallery/index.module.scss
+++ b/src/components/ProfilePage/AccountPublication/PhotoGallery/index.module.scss
@@ -10,13 +10,33 @@
     }
 }
 
+.wrapperPhoto {
+    height: 100%;
+    width: 100%;
+}
+
 .countsInfo {
-    display: block;
+    display: none;
     position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    &:nth-child(-n+3) {
-        top: 0px;
-    }
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.countsInfoWithoutTop {
+    z-index: 5;
+    display: none;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.6);
+    top: 0;
+}
+
+.wrapperPhoto:hover .countsInfo{
+    display: block;
+    cursor: pointer;
+}
+
+.wrapperPhoto:hover .countsInfoWithoutTop {
+    display: block;
+    cursor: pointer;
 }
     
      @media screen and (min-width:$screen-md) {
@@ -26,6 +46,11 @@
         left: 14px;
         right: 14px;
         }
+        .countsInfoWithoutTop {
+            bottom: 14px;
+            left: 14px;
+            right: 14px;
+        }
     }
 
     @media screen and (max-width:$screen-sm-max) {
@@ -34,5 +59,68 @@
         bottom: 3px;
         left: 3px;
         right: 3px;
+        }
+
+        .countsInfoWithoutTop {
+        bottom: 3px;
+        left: 3px;
+        right: 3px;
+        }
+    }
+
+
+  .likeHeartIcon,
+  .commentIcon {
+      display: block;
+      background: url("../../../../assets/icons-image-size-s.png");
+      background-repeat: no-repeat;
+      height: 19px;
+      width: 19px;
+  }
+
+ .likeHeartIcon {
+    background-position: -320px -266px;
+ }     
+
+.commentIcon{
+    background-position: -320px -224px;
+} 
+
+ .counts {
+     font-family: "Montserrat", sans-serif;
+     font-size: 14px;
+     position: relative;
+     display: flex;
+     justify-content: center;
+     top: 50%;
+     color: white;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     z-index: 50;
+ }
+
+ .likeCounts, .commentCounts {
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+ }
+
+ .text {
+        margin-left: 5px;
+        }
+
+   @media screen and (min-width:$screen-sm) {
+        .likeCounts {
+            margin-right: 20px;
+        }
+    }
+
+    @media screen and (max-width:$screen-xs-max) {
+        .counts {
+            flex-direction: column;
+            align-items: center;
+        }
+        .likeCounts {
+            margin-bottom: 5px;
         }
     }
