--- a/src/components/LoginPage/Login/CreateAccount/index.module.scss
+++ b/src/components/LoginPage/Login/CreateAccount/index.module.scss
@@ -7,7 +7,7 @@
     border-radius: 1px;
     padding-top: 24px;
      padding-bottom: 24px;
-     a {
+     .register {
         font-weight: bold;
          color: #3897f0;
          margin-left: 5px;
